Fixes security url embedded format